--- a/movie-info.properties
+++ b/movie-info.properties
@@ -36,8 +36,8 @@ spring.zipkin.base-url=http://cat-zipkin:9411/
 # - CAT -
 ############
 
-cat.data.stringData=basicDataxcbxcvb
-cat.data.intData=12345eterter
+cat.data.stringData=basicData
+cat.data.intData=12345
 
 ############
 # - RABBIT -
