updated property files

--- a/movie-catalog.properties
+++ b/movie-catalog.properties
@@ -19,3 +19,19 @@ spring.zipkin.base-url=http://cat-zipkin:9411/
 
 cat.data.stringData=basicData
 cat.data.intData=12345
+
+############
+# - RABBIT -
+############
+
+spring.rabbitmq.host=rabbit-mq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin123
+
+############
+# - BUS -
+############
+
+spring.cloud.bus.enabled=true
+spring.cloud.bus.refresh.enabled=true
