--- a/movie-rating.properties
+++ b/movie-rating.properties
@@ -34,5 +34,21 @@ spring.zipkin.base-url=http://cat-zipkin:9411/
 # - CAT -
 ############
 
-cat.data.stringData=basicData
-cat.data.intData=12345
+cat.data.stringData=basicDatarating
+cat.data.intData=12345rating
+
+############
+# - RABBIT -
+############
+
+spring.rabbitmq.host=rabbit-mq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin123
+
+############
+# - BUS -
+############
+
+spring.cloud.bus.enabled=true
+spring.cloud.bus.refresh.enabled=true
