--- a/movie-rating.properties
+++ b/movie-rating.properties
@@ -34,8 +34,8 @@ spring.zipkin.base-url=http://cat-zipkin:9411/
 # - CAT -
 ############
 
-cat.data.stringData=basicDatarating
-cat.data.intData=12345rating
+cat.data.stringData=basicDatarating2
+cat.data.intData=12345rating2
 
 ############
 # - RABBIT -
