--- a/discovery-server.properties
+++ b/discovery-server.properties
@@ -9,7 +9,7 @@ eureka.client.register-with-eureka=false
 # - Zipkin -
 ############
 spring.zipkin.enabled=true
-spring.zipkin.base-url=http://cat-zipkin:9411/
+spring.zipkin.base-url=http://zipkin:9411/
 
 ############
 # - CAT -
@@ -22,10 +22,10 @@ cat.data.intData=12345
 # - RABBIT -
 ############
 
-spring.rabbitmq.host=rabbit-mq
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin123
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 ############
 # - BUS -
