--- a/discovery-server.properties
+++ b/discovery-server.properties
@@ -22,10 +22,10 @@ cat.data.intData=12345
 # - RABBIT -
 ############
 
-spring.rabbitmq.host=rabbit-mq
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin123
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 ############
 # - BUS -
