kube prep discovery

--- a/discovery-server.properties
+++ b/discovery-server.properties
@@ -9,7 +9,7 @@ eureka.client.register-with-eureka=false
 # - Zipkin -
 ############
 spring.zipkin.enabled=true
-spring.zipkin.base-url=http://zipkin:9411/
+spring.zipkin.base-url=http://zipkin:9411
 
 ############
 # - CAT -
