--- a/discovery-server.properties
+++ b/discovery-server.properties
@@ -1,3 +1,9 @@
+###################
+# - Server Config -
+###################
+server.port=8761
+spring.application.name=discovery-server
+
 ############
 # - Eureka -
 ############
