config files to repo

--- a/service-001.properties
+++ b/service-001.properties
@@ -1,10 +1,8 @@
 ###################
 # - Server Config -
 ###################
-spring.application.name=gateway
-server.servlet.context-path=/gateway/api
-server.port=8080
-server.ssl.enabled=false
+server.port=8081
+spring.application.name=service-001
 
 ############
 # - Eureka -
