--- a/service-001.properties
+++ b/service-001.properties
@@ -26,6 +26,22 @@ spring.zipkin.base-url=http://zipkin:9411
 cat.data.stringData=basicData
 cat.data.intData=12345
 
+#################
+# - DATA SOURCE -
+#################
+logging.level.liquibase=DEBUG
+spring.datasource.url=jdbc:postgresql://cat-db:5432/cat
+spring.datasource.username=cat
+spring.datasource.password=cat
+spring.datasource.driverClassName=org.postgresql.Driver
+
+################################
+# HIBERNATE - JPA
+################################
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-schema.xml
+
 ############
 # - RABBIT -
 ############
