--- a/service-002.properties
+++ b/service-002.properties
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=basicDataxcvbc
-cat.data.intData=12345bcvbcv
+cat.data.stringData=kube
+cat.data.intData=ernetes
 
 ############
 # - RABBIT -
