demo for kubernetes

--- a/service-002.properties
+++ b/service-002.properties
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=kube
-cat.data.intData=ernetes
+cat.data.stringData=kubernetes
+cat.data.intData=proba
 
 ############
 # - RABBIT -
