--- a/service-001.properties
+++ b/service-001.properties
@@ -23,8 +23,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=basicData
-cat.data.intData=12345
+cat.data.stringData=basicData1
+cat.data.intData=123456
 
 #################
 # - DATA SOURCE -
