--- a/service-001.properties
+++ b/service-001.properties
@@ -57,3 +57,8 @@ spring.rabbitmq.password=guest
 
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
+
+############
+# - LOG -
+############
+cat.log.level = trace
