--- a/service-001.properties
+++ b/service-001.properties
@@ -25,7 +25,7 @@ spring.zipkin.base-url=http://zipkin:9411
 
 cat.data.stringData=basicData1
 cat.data.intData=123456
-cat.data.level = info
+cat.data.level = trace
 
 #################
 # - DATA SOURCE -
