--- a/service-001.properties
+++ b/service-001.properties
@@ -59,6 +59,13 @@ spring.rabbitmq.password=guest
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
 
+###################
+# - KeyCloak Config -
+###################
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://keycloak:8087/auth/realms/cat-realm/protocol/openid-connect/token/introspect
+spring.security.oauth2.resourceserver.opaquetoken.client-id=cat-client
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=WKlCRICMNDB0WwlVtB1LTAOCrI0kGOUw
+
 ############
 # - LOG -
 ############
