--- a/service-003.properties
+++ b/service-003.properties
@@ -60,3 +60,11 @@ spring.rabbitmq.password=guest
 
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
+
+###################
+# - Redis Config -
+###################
+spring.cache.type=redis
+spring.redis.host=redis
+spring.redis.port=6379
+spring.cache.redis.time-to-live=60000
