--- a/service-002.properties
+++ b/service-002.properties
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=kubernetes1
-cat.data.intData=proba1
+cat.data.stringData=kubernetes123
+cat.data.intData=proba123
 
 ############
 # - RABBIT -
