--- a/service-002.properties
+++ b/service-002.properties
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=kubernetes123
-cat.data.intData=proba123
+cat.data.stringData=webhooklocal
+cat.data.intData=5623
 
 ############
 # - RABBIT -
