--- a/service-001.properties
+++ b/service-001.properties
@@ -69,4 +69,4 @@ spring.security.oauth2.resourceserver.opaquetoken.client-secret=WKlCRICMNDB0WwlV
 ############
 # - LOG -
 ############
-cat.log.level = trace
+cat.log.level = TRACE
