--- a/service-001.properties
+++ b/service-001.properties
@@ -23,8 +23,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=basicData1
-cat.data.intData=123456
+cat.data.stringData=basicData1trzuztrurt
+cat.data.intData=123456ddfhgfh
 cat.data.level = trace
 
 #################
