--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -1,25 +1,37 @@
 ###################
 # - Server Config -
 ###################
-server.port=8082
-spring.application.name=service-002
+server.port=8081
+spring.application.name=service-001
 
 ############
 # - Eureka -
 ############
+spring.cloud.discovery.enabled=true
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-
-spring.cloud.discovery.enabled=true
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+
+############
+# - Zipkin -
+############
+spring.zipkin.enabled=true
+spring.zipkin.base-url=http://zipkin:9411
+
+############
+# - CAT -
+############
+
+cat.data.stringData=basicData1trzuztrurt
+cat.data.intData=123456ddfhgfh
+cat.data.level = trace
 
 #################
 # - DATA SOURCE -
 #################
 logging.level.liquibase=DEBUG
-spring.liquibase.default-schema=schema1
-spring.datasource.url=jdbc:postgresql://cat-db:5432/cat?currentSchema=schema1
+spring.datasource.url=jdbc:postgresql://cat-db:5432/cat
 spring.datasource.username=cat
 spring.datasource.password=cat
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -29,21 +41,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 ################################
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-cat.xml
-
-############
-# - Zipkin -
-############
-logging.level.org.springframework.web=DEBUG
-spring.zipkin.enabled=true
-spring.zipkin.base-url=http://zipkin:9411
-
-############
-# - CAT -
-############
-
-cat.data.stringData=webhooklocal
-cat.data.intData=5623
+spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-schema.xml
 
 ############
 # - RABBIT -
@@ -60,3 +58,15 @@ spring.rabbitmq.password=guest
 
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
+
+###################
+# - KeyCloak Config -
+###################
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://keycloak:8087/auth/realms/cat-realm/protocol/openid-connect/token/introspect
+spring.security.oauth2.resourceserver.opaquetoken.client-id=cat-client
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=WKlCRICMNDB0WwlVtB1LTAOCrI0kGOUw
+
+############
+# - LOG -
+############
+cat.log.level = info
