--- a/service-002-prod.properties
+++ b/service-002-prod.properties
@@ -42,7 +42,7 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=webhooklocal
+cat.data.stringData=production
 cat.data.intData=5623
 
 ############
