--- a/service-003-test.properties
+++ b/service-003-test.properties
@@ -1,8 +1,8 @@
 ###################
 # - Server Config -
 ###################
-server.port=8082
-spring.application.name=service-002
+server.port=8083
+spring.application.name=service-003
 
 ############
 # - Eureka -
@@ -18,8 +18,8 @@ eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
 # - DATA SOURCE -
 #################
 logging.level.liquibase=DEBUG
-spring.liquibase.default-schema=schema1
-spring.datasource.url=jdbc:postgresql://cat-db:5432/cat?currentSchema=schema1
+spring.liquibase.default-schema=schema2
+spring.datasource.url=jdbc:postgresql://cat-db:5432/cat?currentSchema=schema2
 spring.datasource.username=cat
 spring.datasource.password=cat
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -29,7 +29,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 ################################
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-cat.xml
+spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-service003.xml
 
 ############
 # - Zipkin -
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=webhooklocal
-cat.data.intData=5623
+cat.data.stringData=basicDataxcvbc
+cat.data.intData=12345bcvbcv
 
 ############
 # - RABBIT -
@@ -60,3 +60,11 @@ spring.rabbitmq.password=guest
 
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
+
+###################
+# - Redis Config -
+###################
+spring.cache.type=redis
+spring.redis.host=redis
+spring.redis.port=6379
+spring.cache.redis.time-to-live=60000
