--- a/service-001-test.properties
+++ b/service-001-test.properties
@@ -23,9 +23,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=basicData1trzuztrurt
-cat.data.intData=123456ddfhgfh
-cat.data.level = trace
+cat.data.stringData=test
+cat.data.intData=12345
 
 #################
 # - DATA SOURCE -
@@ -59,14 +58,7 @@ spring.rabbitmq.password=guest
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
 
-###################
-# - KeyCloak Config -
-###################
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://keycloak:8087/auth/realms/cat-realm/protocol/openid-connect/token/introspect
-spring.security.oauth2.resourceserver.opaquetoken.client-id=cat-client
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=WKlCRICMNDB0WwlVtB1LTAOCrI0kGOUw
-
 ############
 # - LOG -
 ############
-cat.log.level = info
+cat.log.service001.level = info
