--- a/service-002-dev.properties
+++ b/service-002-dev.properties
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=webhooklocal
-cat.data.intData=5623
+cat.data.stringData=development
+cat.data.intData=12345bcvbcv
 
 ############
 # - RABBIT -
@@ -60,3 +60,8 @@ spring.rabbitmq.password=guest
 
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
+
+############
+# - LOG -
+############
+cat.log.service002.level = info
