--- a/service-003-test.properties
+++ b/service-003-test.properties
@@ -42,7 +42,7 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=basicDataxcvbc
+cat.data.stringData=test
 cat.data.intData=12345bcvbcv
 
 ############
@@ -68,3 +68,8 @@ spring.cache.type=redis
 spring.redis.host=redis
 spring.redis.port=6379
 spring.cache.redis.time-to-live=60000
+
+############
+# - LOG -
+############
+cat.log.service003.level = info
