--- a/gateway.properties
+++ b/gateway.properties
@@ -47,9 +47,4 @@ spring.cloud.bus.refresh.enabled=true
 ###################
 # - KeyCloak Config -
 ###################
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://keycloak:8087/auth/realms/cat-realm/protocol/openid-connect/token/introspect
-spring.security.oauth2.resourceserver.opaquetoken.client-id=cat-client
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=WKlCRICMNDB0WwlVtB1LTAOCrI0kGOUw
-spring.cloud.gateway.routes[0].id=getdata
-spring.cloud.gateway.routes[0].uri=http://service-001:8081
-spring.cloud.gateway.routes[0].predicates[0]=Path=/service-001/api/**
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8087/auth/realms/catrealm
