--- a/service-002-prod.properties
+++ b/service-002-prod.properties
@@ -43,7 +43,7 @@ spring.zipkin.base-url=http://zipkin:9411
 ############
 
 cat.data.stringData=production
-cat.data.intData=5623
+cat.data.intData=12345bcvbcv
 
 ############
 # - RABBIT -
@@ -60,3 +60,8 @@ spring.rabbitmq.password=guest
 
 spring.cloud.bus.enabled=true
 spring.cloud.bus.refresh.enabled=true
+
+############
+# - LOG -
+############
+cat.log.service002.level = info
