--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -24,7 +24,7 @@ spring.zipkin.base-url=http://zipkin:9411
 ############
 
 cat.data.stringData=development
-cat.data.intData=12345fgdxfg
+cat.data.intData=12345fgdxfgysdfgsdf
 
 #################
 # - DATA SOURCE -
