--- a/service-001-prod.properties
+++ b/service-001-prod.properties
@@ -24,7 +24,7 @@ spring.zipkin.base-url=http://zipkin:9411
 ############
 
 cat.data.stringData=production
-cat.data.intData=12345
+cat.data.intData=12345sdfgdsg
 
 #################
 # - DATA SOURCE -
