--- a/service-001-test.properties
+++ b/service-001-test.properties
@@ -24,7 +24,7 @@ spring.zipkin.base-url=http://zipkin:9411
 ############
 
 cat.data.stringData=test
-cat.data.intData=12345
+cat.data.intData=12345dtdfgdfgf
 
 #################
 # - DATA SOURCE -
