--- a/service-002-dev.properties
+++ b/service-002-dev.properties
@@ -42,7 +42,7 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=development
+cat.data.stringData=developmentfgfg
 cat.data.intData=12345bcvbcv
 
 ############
