--- a/service-002-dev.properties
+++ b/service-002-dev.properties
@@ -43,7 +43,7 @@ spring.zipkin.base-url=http://zipkin:9411
 ############
 
 cat.data.stringData=developmentfgfgdfghfdghdfghfghfgh
-cat.data.intData=12345bcvbcv
+cat.data.intData=12345bcvbcvfdhfghj
 
 ############
 # - RABBIT -
