--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -2,7 +2,7 @@
 # - Server Config -
 ###################
 server.port=8081
-spring.application.name=service-001
+spring.application.name=service-001-dev
 
 ############
 # - Eureka -
