--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -23,7 +23,7 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=development
+cat.data.stringData=developmentsdgdsfgdfsg
 cat.data.intData=12345fgdxfgysdfgsdf
 
 #################
