--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -61,4 +61,4 @@ spring.cloud.bus.refresh.enabled=true
 ############
 # - LOG -
 ############
-cat.log.service001.level = info
+cat.log.service001.level = error
