--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -23,7 +23,7 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=developmentsdgdsfgdfsg
+cat.data.stringData=developmentsdgdsfgdfsgstdtsfgdsfgh
 cat.data.intData=12345fgdxfgysdfgsdffdghfdghfghfgfhjghjfghjgfh
 
 #################
@@ -61,4 +61,4 @@ spring.cloud.bus.refresh.enabled=true
 ############
 # - LOG -
 ############
-cat.log.service001.level = error
+cat.log.service001.level = debug
