--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -61,4 +61,9 @@ spring.cloud.bus.refresh.enabled=true
 ############
 # - LOG -
 ############
-cat.log.service001.level = debug
+cat.log.service001.level = info
+
+############
+# - FEIGN -
+############
+cat.service.feign = http://service-002-dev:8082
