--- a/gateway-prod.properties
+++ b/gateway-prod.properties
@@ -53,5 +53,5 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8087/auth/r
 # - Routes Config -
 ###################
 spring.cloud.gateway.routes[0].id=service-001-prod
-spring.cloud.gateway.routes[0].uri=lb://service-001:8081
+spring.cloud.gateway.routes[0].uri=lb://service-001-prod:8081
 spring.cloud.gateway.routes[0].predicates[0]=Path=/service-001/api/**
