--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -23,7 +23,7 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=developmentsdgdsfgdfsgstdtsfgdsfgh
+cat.data.stringData=developmentsdgdsfgdfsgstdtsfgdsfghsadfsdfs
 cat.data.intData=12345fgdxfgysdfgsdffdghfdghfghfgfhjghjfghjgfh
 
 #################
@@ -66,4 +66,5 @@ cat.log.service001.level = info
 ############
 # - FEIGN -
 ############
-cat.service.feign = http://service-003-dev:8083
+cat.service002.feign = service-002-dev
+cat.service003.feign = service-003-dev
