--- a/service-003-prod.properties
+++ b/service-003-prod.properties
@@ -2,7 +2,7 @@
 # - Server Config -
 ###################
 server.port=8083
-spring.application.name=service-003
+spring.application.name=service-003-prod
 
 ############
 # - Eureka -
