--- a/service-001-test.properties
+++ b/service-001-test.properties
@@ -2,7 +2,7 @@
 # - Server Config -
 ###################
 server.port=8081
-spring.application.name=service-001
+spring.application.name=service-001-test
 
 ############
 # - Eureka -
@@ -62,3 +62,11 @@ spring.cloud.bus.refresh.enabled=true
 # - LOG -
 ############
 cat.log.service001.level = info
+
+
+############
+# - FEIGN -
+############
+cat.service002.feign = service-002-test
+cat.service003.feign = service-003-test
+
