--- a/service-002-prod.properties
+++ b/service-002-prod.properties
@@ -2,7 +2,7 @@
 # - Server Config -
 ###################
 server.port=8082
-spring.application.name=service-002
+spring.application.name=service-002-prod
 
 ############
 # - Eureka -
