--- a/service-002-dev.properties
+++ b/service-002-dev.properties
@@ -64,4 +64,4 @@ spring.cloud.bus.refresh.enabled=true
 ############
 # - LOG -
 ############
-cat.log.service002.level = info
+cat.log.service002.level = warn
