--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -61,7 +61,7 @@ spring.cloud.bus.refresh.enabled=true
 ############
 # - LOG -
 ############
-cat.log.service001.level = trace
+cat.log.service001.level = info
 
 ############
 # - FEIGN -
