--- a/service-001-dev.properties
+++ b/service-001-dev.properties
@@ -66,5 +66,5 @@ cat.log.service001.level = info
 ############
 # - FEIGN -
 ############
-cat.service002.feign = service-002-dev
-cat.service003.feign = service-003-dev
+cat.feign.service002 = service-002-dev
+cat.feign.service003 = service-003-dev
