--- a/service-003-dev.properties
+++ b/service-003-dev.properties
@@ -42,8 +42,8 @@ spring.zipkin.base-url=http://zipkin:9411
 # - CAT -
 ############
 
-cat.data.stringData=development
-cat.data.intData=12345bcvbcv
+cat.data.stringData=developmentsdfgsdf
+cat.data.intData=12345bcvbcvsadfsda
 
 ############
 # - RABBIT -
@@ -72,4 +72,4 @@ spring.cache.redis.time-to-live=60000
 ############
 # - LOG -
 ############
-cat.log.service003.level = info
+cat.log.service003.level = warn
