--- a/service-002-dev.properties
+++ b/service-002-dev.properties
@@ -34,7 +34,7 @@ spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-cat
 ############
 # - Zipkin -
 ############
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 spring.zipkin.enabled=true
 spring.zipkin.base-url=http://zipkin:9411
 
@@ -64,4 +64,4 @@ spring.cloud.bus.refresh.enabled=true
 ############
 # - LOG -
 ############
-cat.log.service002.level = warn
+cat.log.service002.level = info
