--- a/service-003-dev.properties
+++ b/service-003-dev.properties
@@ -34,7 +34,7 @@ spring.liquibase.change-log=classpath:db/changelogs/liquibase-changelog-root-ser
 ############
 # - Zipkin -
 ############
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=WARN
 spring.zipkin.enabled=true
 spring.zipkin.base-url=http://zipkin:9411
 
