--- a/service-003-dev.properties
+++ b/service-003-dev.properties
@@ -72,4 +72,4 @@ spring.cache.redis.time-to-live=60000
 ############
 # - LOG -
 ############
-cat.log.service003.level = info
+cat.log.service003.level = warn
